syntax = "proto3";
package user;
option go_package = "github.com/khoa-nguyendang/ddd-clean-architect-go-template/src/infrastructure/microservices_accessors/user;user";

service UserService {
    rpc Search(SearchRequest) returns(SearchResponse);
    rpc Get(GetRequest) returns(GetResponse);
    rpc Create(CreateRequest) returns(CreateResponse);
    rpc Update(UpdateRequest) returns(UpdateResponse);
    rpc Delete(DeleteRequest) returns(DeleteResponse);
}


message User {
    string id = 1;
    string company_id = 2;
    string first_name = 3;
    string mid_name = 4;
    string sur_name = 5;
    string avatar_url = 6;
    bool is_active = 7;
    string alias = 8;
    string basic_address = 9;
    string email = 10;
    string phone = 11;
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    int32 code = 1;
    string message = 2;
    string error = 3;

    User data = 4;
}

message SearchRequest {
    string search_term = 1;
    int64 current_page = 2;
    int64 page_size = 3; 
}

message SearchResponse {
    int32 code = 1;
    string message = 2;
    string error = 3;

    repeated User data = 4;
}

message CreateRequest {
    string company_id = 2;
    string first_name = 3;
    string mid_name = 4;
    string sur_name = 5;
    string avatar_url = 6;
    bool is_active = 7;
    string alias = 8;
    string basic_address = 9;
    string email = 10;
    string phone = 11;
}

message CreateResponse {
    int32 code = 1;
    string message = 2;
    string error = 3;

    User data = 4;
}

message UpdateRequest {
    string id = 1;
    string company_id = 2;
    string first_name = 3;
    string mid_name = 4;
    string sur_name = 5;
    string avatar_url = 6;
    bool is_active = 7;
    string alias = 8;
    string basic_address = 9;
    string email = 10;
    string phone = 11;
}

message UpdateResponse {
    int32 code = 1;
    string message = 2;
    string error = 3;

    User data = 4;
}


message DeleteRequest {
    string id = 1;
    bool soft_delete = 2;
}

message DeleteResponse {
    int32 code = 1;
    string message = 2;
    string error = 3;

    bool deleted = 4;
}

